# default_fastapi

./: .gitignore  LICENCE.txt  README.md  config.py  crud_router.py  main.py  pyproject.toml  run_migrations.py
migrations/: env.py
migrations/versions/: d50277dd0fa7_add_age_and_is_active_to_user.py
models/: user.py
routes/: user.py
