[project]
name = "default-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "diskcache>=5.6.3",
    "fastapi[all]>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.25",
    "uvicorn[all]>=0.37.0",
]
